# ASCI-desktop

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
backend/: pyproject.toml  run_server.py
backend/app/: config.py  database.py  main.py
backend/app/routers/: export.py  papers.py  results.py  search.py
backend/app/services/: ai_service.py  exporter.py  pdf_parser.py  vectorstore.py
doc/: build-size-estimate.md  draft.md
doc/raw/: .~PilotingCoding_Hu.xlsx  PilotingCoding_Hu.xlsx  SKILL.md
doc/raw/PDF_Hu/: 170-suppl.docx
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: python-backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ExportPanel.tsx  ImportPanel.tsx  ParsePanel.tsx  ResultsPanel.tsx  SearchPanel.tsx  VectorizePanel.tsx
