[project]
name = "asci-backend"
version = "0.1.0"
description = "ASCI-Desktop Python backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyMuPDF>=1.25.0",
    "pdfplumber>=0.11.0",
    "lancedb>=0.17.0",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.20.0",
    "openpyxl>=3.1.0",
    "weasyprint>=63.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]
