[package]
name = "asci-desktop"
version = "0.1.0"
description = "ASCI-Desktop: Academic paper analysis tool"
authors = ["opensci"]
edition = "2021"

[lib]
name = "asci_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-dialog = "2.6.0"
